--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faugei</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>fauGEI</title>
 
+   <link rel="stylesheet" href="./styles/style.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="stylesheet" href="./styles/header.css">
 
 
 </head>
-<body>
-    
+<body >
+   <header class="header">
+ 
+    <div class="header-nav">
+     <div class="header-logo">
+        <img src="./assets/logo.png" alt="please try again">
+     </div> 
+     <div class="header-icon">
+      <a class="nav-res" href="">Home</a>
+      <a class="btn nav-res" href="">Shop</a>
+      <a class="btn nav-res" href="">About us</a>
+       <i class="fa-solid fa-cart-shopping"> cart ($56)</i>
+
+     </div>
+     </div>
 </body>
 </html>
