added banner with responsiveness

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="./styles/header.css">
+   <link rel="stylesheet" href="./styles/banner.css">
 
 
 </head>
@@ -29,5 +30,25 @@
 
      </div>
      </div>
+
+     <div class="header-banar">
+
+ <div class="banar-text">
+ <h1>ALWAYS <span>FRESH FLOWERS</span></h1>
+ <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+
+ </div> 
+
+ <div class="banar-img">
+    <img src="./assets/hero-flower.png" alt="">
+ </div>
+
+ </div>
+
+ </header>
+
+
+
+
 </body>
 </html>
