added card with responsiveness

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="./styles/header.css">
    <link rel="stylesheet" href="./styles/banner.css">
+   <link rel="stylesheet" href="./styles/card.css">
 
 
 </head>
@@ -46,6 +47,76 @@
  </div>
 
  </header>
+
+     <main>  
+  
+    <div class="main-container">
+  
+      <div class="main-text">
+        <h1 class="main-head"> <span>Our</span> Plants</h1>
+        <p class="main-distri">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+      </div>
+
+
+       <div class="main-img-card">
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+        <div class="main-img">
+              <img src="./assets/sample-flower-image.png" alt="">
+        <p class="main-img-name">Lily Bollosom</p>
+         <p class="main-img-price">20 USD</p>
+         <button class="btn-1">ADD TO CART</button>
+
+        </div> 
+
+       </div> 
 
 
 
