--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="./assets/logo.png" alt="please try again">
      </div> 
      <div class="header-icon">
-      <a class="nav-res" href="">Home</a>
+      <a class="btn nav-res" href="">Home</a>
       <a class="btn nav-res" href="">Shop</a>
       <a class="btn nav-res" href="">About us</a>
        <i class="fa-solid fa-cart-shopping"> cart ($56)</i>
