added the badge and make the section responsive

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <link rel="stylesheet" href="./styles/header.css">
    <link rel="stylesheet" href="./styles/banner.css">
    <link rel="stylesheet" href="./styles/card.css">
+   <link rel="stylesheet" href="./styles/flowersandlatest.css">
 
 
 </head>
@@ -117,6 +118,38 @@
         </div> 
 
        </div> 
+
+
+        <div class="main-banar">
+            <div class="main-section-img">
+            <img class="bangladesh" src="./assets/flower-store.png" alt="">
+
+            <img class="dhaka" style="width: 190px;" src="./assets/trusted-badge.png" alt="">
+
+            </div>
+            <div class="main-banar-text">
+                <h1>Flower & Plants Lover</h1>
+                <ul class="abc">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li> <br> 
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li> <br> 
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li> <br> 
+                </ul>
+            </div>
+         
+            </div>
+
+       <div class="main-paragraph">
+        <h1 class="main-para-head"> <span>Latest</span> Deals</h1>
+        <p class="main-para-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+       </div>
+        
+
+
+  
+
+
+    </div>
+
 
 
 
