added footer and final polish overall

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <link rel="stylesheet" href="./styles/banner.css">
    <link rel="stylesheet" href="./styles/card.css">
    <link rel="stylesheet" href="./styles/flowersandlatest.css">
+   <link rel="stylesheet" href="./styles/latestdealmiddlesec.css">
+   <link rel="stylesheet" href="./styles/footer.css">
 
 
 </head>
@@ -36,7 +38,7 @@
      <div class="header-banar">
 
  <div class="banar-text">
- <h1>ALWAYS <span>FRESH FLOWERS</span></h1>
+ <h1>ALWAYS <span>FRESH <br> FLOWERS</span></h1>
  <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
 
  </div> 
@@ -55,7 +57,7 @@
   
       <div class="main-text">
         <h1 class="main-head"> <span>Our</span> Plants</h1>
-        <p class="main-distri">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <p class="main-di">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
       </div>
 
 
@@ -142,15 +144,71 @@
         <h1 class="main-para-head"> <span>Latest</span> Deals</h1>
         <p class="main-para-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
        </div>
-        
+
+       <div class="leatest-deals">
+      <div class="two-imgs">
+        <div class="img-1">
+          <h3>60% Off  |  Bloom Plant</h3>
+          <a href="">Shop Now</a>
+        </div>
+        <div class="img-2">
+          <h3>30% Off  |  Ana Plant</h3>
+          <a href="">Shop Now</a>
+        </div>
+      </div>
+
+      <div class="img-3">
+        <h3>25% Off  |  Zabo Plant</h3>
+          <a href="">Shop Now</a>
+      </div>
+            </div>
 
 
-  
+    <div class="bunch">
+     <div class="bunch-content">
+       <h3>Join the colorful Bunch</h3>
+      <div class="input">
+        <input type="email" name="" id="" placeholder="Write email" class="email-input">
+        <button class="btn-1">Subscribe</button>
+      </div>
+     </div>
+ </div>
+ </main>
 
 
+       <footer>
+   <div class="footer">
+     <div class="content" style="width: 359px;">
+      <img src="./assets/logo.png" alt="">
+      <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+     </div>
+      <div class="home">
+       <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Contact Us</a></li>
+        </ul>
+     </div>
+     <div class="feature">
+      <ul>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms of Service</a></li>
+            <li><a href="">Help Center</a></li>
+            <li><a href="">Features</a></li>
+      </ul>
+    </div>
+    <div class="icons">
+      <div><img src="./assets/icon-linkedin.png" alt=""></div>
+      <div><img src="./assets/icon-twitter.png" alt=""></div>
+      <div><img src="./assets/icon-facebook.png" alt=""></div>
+      <div><img src="./assets/icon-youtube.png" alt=""></div>   
     </div>
 
-
+   </div>
+  </footer
 
 
 
